# metatomic

./: .codecov.yml  .gitignore  AUTHORS  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  Cargo.toml  README.md  pyproject.toml  setup.py  test.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: ase-tests.yml  build-wheels.yml  coverage.yml  docs.yml  python-tests.yml  rust-tests.yml  tests.yml  torch-tests.yml  torchsim-tests.yml
docs/: Doxyfile  Doxyfile.metatomic  doxyrest-config.lua
docs/extensions/: lammps_lexer.py
docs/generate_examples/: conf.py
docs/src/: _prolog.rst  cite.rst  conf.py  index.rst  installation.rst  overview.rst  robots.txt
docs/src/core/: CHANGELOG.md  index.rst  units.rst
docs/src/devdoc/: index.rst
docs/src/engines/: ase.rst  chemiscope.rst  eon.rst  gromacs.rst  index.rst  ipi.rst  lammps.rst  plumed-model.py  plumed.rst  torch-sim-architecture.rst  torch-sim-batched.rst  torch-sim-getting-started.rst  torch-sim-model-loading.rst  torch-sim.rst  torchsim.rst
docs/src/inputs/: charge.rst  index.rst  spin.rst
docs/src/outputs/: charge.rst  charges.rst  displacements-and-momenta.rst  energy.rst  features.rst  heat_flux.rst  heat_fluxes.rst  index.rst  masses.rst  momenta.rst  non_conservative.rst  positions-and-momenta.rst  positions.rst  spin.rst  spin_multiplicity.rst  variants.rst  velocities.rst
docs/src/quantities/: charge.rst  energy.rst  feature.rst  heat_flux.rst  index.rst  mass.rst  momentum.rst  non_conservative.rst  position.rst  spin_multiplicity.rst  variants.rst  velocity.rst
docs/src/reference/: ase.rst  index.rst  systems.rst
docs/src/torch/: CHANGELOG.md  index.rst
docs/static/css/: metatomic.css
metatomic-core/: CHANGELOG.md  CMakeLists.txt  Cargo.toml  build.rs
metatomic-core/cmake/: detect_cargo.cmake  metatomic-config.in.cmake  nlohmann_json.cmake
metatomic-core/include/: metatomic.h  metatomic.hpp
metatomic-core/include/metatomic/: errors.hpp  metadata.hpp  model.hpp  plugin.hpp  system.hpp  utils.hpp
metatomic-core/src/: lib.rs  metadata.rs  model.rs  plugin.rs  quantities.rs  system.rs  units.rs
metatomic-core/src/c_api/: io.rs  metadata.rs  mod.rs  model.rs  plugin.rs  status.rs  system.rs  utils.rs
metatomic-core/src/io/: mod.rs  npy_header.rs  system.rs  tensor.rs
metatomic-core/src/kernels/: cpu.rs  cuda.rs  cuda_kernels.cu  metal.rs  metal_kernels.metal  mod.rs
metatomic-core/src/quantity/: charge.rs  check.rs  checks.rs  energy.rs  feature.rs  heat_flux.rs  mass.rs  mod.rs  momentum.rs  non_conservative_force.rs  non_conservative_stress.rs  position.rs  quantities.rs  spin_multiplicity.rs  velocity.rs
metatomic-core/tests/: CMakeLists.txt  c-model.cpp  check-cxx-install.rs  metadata.cpp  misc.cpp  plugins.cpp  run-cxx-tests.rs  system.cpp
metatomic-core/tests/cmake-project/: CMakeLists.txt  README.md
metatomic-core/tests/cmake-project/src/: main.c  main.cpp
metatomic-core/tests/cxx/: helpers.hpp  metadata.cpp  misc.cpp  model.cpp  plugins.cpp  system.cpp
metatomic-core/tests/data/: legacy-system.mta  legacy.mta
metatomic-core/tests/test-plugins/: CMakeLists.txt  bad-abi.c  plugin.c
metatomic-core/tests/utils/: mod.rs
metatomic-torch/: CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md  VERSION
metatomic-torch/cmake/: metatomic_torch-config.in.cmake
metatomic-torch/include/metatomic/: torch.hpp
metatomic-torch/include/metatomic/torch/: misc.hpp  model.hpp  output.hpp  outputs.hpp  quantities.hpp  system.hpp  units.hpp
metatomic-torch/include/metatomic/torch/io/: io.hpp  zip.hpp
metatomic-torch/src/: misc.cpp  model.cpp  output.cpp  outputs.cpp  quantities.cpp  register.cpp  system.cpp  units.cpp
metatomic-torch/src/internal/: npy.cpp  npy.hpp  shared_libraries.cpp  shared_libraries.hpp  utils.hpp  zip.cpp  zip.hpp
metatomic-torch/src/io/: io.cpp  npy.cpp  zip.cpp
metatomic-torch/tests/: CMakeLists.txt  check-torch-install.rs  misc.cpp  models.cpp  run-torch-tests.rs  shared-libraries.cpp  units.cpp
metatomic-torch/tests/cmake-project/: CMakeLists.txt  main.cpp
metatomic-torch/tests/neighbor-checks/: README.md
metatomic-torch/tests/utils/: mod.rs
python/: Cargo.toml
python/examples/: .gitignore  1-export-atomistic-model.py  2-running-ase-md.py  3-atomistic-model-with-nl.py  4-profiling.py  5-torchsim-getting-started.py  6-torchsim-batched.py
python/examples/orca/: README.rst  metatomic-orca-client  metatomic-orca-external  metatomic-orca-server  (+2 more)
python/metatensor_torch/: CMakeLists.txt
python/metatomic_ase/: AUTHORS  CHANGELOG.md  README.md  README.rst  pyproject.toml  setup.py
python/metatomic_ase/src/metatomic_ase/: __init__.py  _calculator.py  _neighbors.py  _symmetry.py
python/metatomic_ase/tests/: _tests_utils.py  calculator.py  conftest.py  energy_ensemble.py  heat_flux.py  neighbors.py  symmetrized.py
python/metatomic_core/: CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.py
python/metatomic_core/metatomic/: torch.py
python/metatomic_torch/: .gitignore  CMakeLists.txt  MANIFEST.in  README.rst  pyproject.toml  setup.py
python/metatomic_torchsim/: AUTHORS  Architecture.md  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
python/metatomic_torchsim/docs/: conf.py  index.md
python/metatomic_torchsim/docs/_templates/partials/: site-foot.html
python/metatomic_torchsim/docs/explanation/: architecture.md
python/metatomic_torchsim/docs/howto/: batched_simulations.md  model_loading.md
python/metatomic_torchsim/docs/tutorials/: getting_started.md
python/metatomic_torchsim/metatomic/torchsim/: __init__.py  _calculator.py
python/metatomic_torchsim/metatomic_torchsim/: __init__.py  _model.py  _neighbors.py
python/metatomic_torchsim/tests/: conftest.py  model_loading.py  test_model_loading.py  test_torchsim.py  torchsim.py
python/tests/: run-python-tests.rs
scripts/: benchmark-md-cuda-memory.py  check-c-api-docs.py  check-format.sh  clean-python.sh  create-dftd3-params-npz.py  format.sh  git-version-info.py  mkdoc.nu  package-core.sh  package-torch.sh
scripts/include/: metatensor.h
(+93 files in other folders)
