[package]
name = "metatomic-core"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.74"
exclude = [
    "tests"
]

[lib]
crate-type = ["cdylib", "staticlib"]
name = "metatomic"
bench = false

[dependencies]
metatensor = { version = "0.4.1" }
once_cell = "1"
dlpk = { version = "0.3", features = ["ndarray"]}
json = "0.12"
libloading = "0.8"
ndarray = "0.17"


[build-dependencies]
cbindgen = { version = "0.29", default-features = false }

# the last versions that supports Rust 1.74
serde_spanned = "=1.0.1"
toml = "=0.9.6"
toml_datetime = "=0.7.1"
toml_parser = "=1.0.2"
toml_writer = "=1.0.2"
tempfile = "=3.24.0"
indexmap = "=2.11.4"

[dev-dependencies]
lazy_static = "1"
which = "8"
