[package]
name = "metatomic-core"
version = "0.1.0"
edition = "2024"
publish = false
rust-version = "1.88"
exclude = [
    "tests"
]

[lib]
crate-type = ["cdylib", "staticlib"]
name = "metatomic"
bench = false

[dependencies]
metatensor = { version = "0.5.0" }
dlpk = { version = "0.4", features = ["ndarray"]}
json = "0.12"
libloading = "0.9"
ndarray = "0.17"

# For serialization of the systems
zip = { version = "8.6.0", default-features = false }
byteorder = {version = "1"}

# For custom kernels
cudarc = {version = "0.19", default-features = false, features=["std", "cuda-13030", "driver", "nvrtc", "dynamic-loading"]}

[target.'cfg(target_os = "macos")'.dependencies]
objc2-metal = "0.3"
objc2 = "0.6"
objc2-foundation = "0.3"

[build-dependencies]
cbindgen = { version = "0.29", default-features = false }

[dev-dependencies]
lazy_static = "1"
which = "8"
