[package]
name = "metatomic-core"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.88"
exclude = [
    "tests"
]

[lib]
crate-type = ["cdylib", "staticlib"]
name = "metatomic"
bench = false

[dependencies]
metatensor = { version = "0.5.0" }
once_cell = "1"
dlpk = { version = "0.4", features = ["ndarray"]}
json = "0.12"
libloading = "0.9"
ndarray = "0.17"


[build-dependencies]
cbindgen = { version = "0.29", default-features = false }

[dev-dependencies]
lazy_static = "1"
which = "8"
